--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,7 @@ body {
   margin: 0;
   font-family: "Cabin", sans-serif;
   font-size: 18px;
-  background-color: #343633ff;
+  background-color: #ffffff;
 }
 
 a {
